<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_todos"
        android:icon="@drawable/ic_todos_black_24dp"
        android:title="@string/title_todos" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_statistics_black_24dp"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/navigation_map"/>

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_music_black_24dp"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />
</menu>