<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_music">

    <keep_state_fragment
        android:id="@+id/navigation_music"
        android:name="com.jvaldiviab.openrun2.view.fragment.MusicFragment"
        android:label="@string/title_music" />

    <keep_state_fragment
        android:id="@+id/navigation_statistics"
        android:name="com.jvaldiviab.openrun2.view.fragment.StatisticsFragment"
        android:label="@string/title_statistics"/>

    <keep_state_fragment
        android:id="@+id/navigation_todos"
        android:name="com.jvaldiviab.openrun2.view.fragment.TodosFragment"
        android:label="@string/title_todos" />
    <keep_state_fragment
        android:id="@+id/navigation_profile"
        android:name="com.jvaldiviab.openrun2.view.fragment.ProfileContainerFragment"
        android:label="@string/title_profile" />
    <keep_state_fragment
        android:id="@+id/navigation_map"
        android:name="com.jvaldiviab.openrun2.view.fragment.MapFragment"
        android:label="fragment_map" />
</navigation>